<resources>
    <string name="app_name">Registro de Entradas</string>
    <string name="txt_tipo">Tipo de entrada</string>
    <string name="spinner_ent">seleccionar</string>
    <string name="txt_idi">ID</string>
    <string name="edt_id">Registro de ID</string>
    <string name="txt_cod">Codigo de Barras</string>
    <string name="edt_cod">Bar Code</string>
    <string name="btimg_cam">Icono de leer codigo</string>
    <string name="txt_lot">Lote</string>
    <string name="edt_lot">Ingresar lote</string>
    <string name="txt_cant">Cantidad</string>
    <string name="edt_cant">ingresar</string>
    <string name="txt_produ">Producto</string>
    <string name="edt_prod">descripcion</string>
    <string name="txt_unidad">Unidad de Medida</string>
    <string name="edt_unidad">ingresar</string>
    <string name="btback">back</string>
    <string name="btconfirm">Confirmar Entrada</string>

    <!-- Strings de pantalla index menu -->

    <string name="txt_index">SKU MANAGER</string>
    <string name="imb_stock">Registrar entrada</string>
    <string name="imb_imput">Registrar producto</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- Strings de Registrar producto Activity -->

    <string name="txt_add">Agregar Producto</string>
    <string name="txt_precio">Precio</string>
    <string name="edt_precio">precio</string>
    <string name="edt_id2">ingresar</string>
    <string name="txt_id2">ID</string>






</resources>
